--- a/.github/workflows/docker-push.yaml
+++ b/.github/workflows/docker-push.yaml
@@ -37,3 +37,4 @@ jobs:
         file: ./dockerfile
         push: true
         tags: dodaidodai/github-activity-notify:${{ steps.prep.outputs.tag }}
+        platforms: linux/amd64,linux/arm64
