--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -27,10 +27,10 @@ jobs:
         git config user.email "github-actions@github.com"
 
     - name: Check out the exec branch
-      run: git checkout --allow-empty -b exec || git checkout exec
+      run: git checkout -b exec || git checkout exec
 
     - name: Add executable
       run: |
         git add main
-        git commit -m "Add executable" || echo "No changes to commit"
+        git commit --allow-empty -m "Add executable" || echo "No changes to commit"
         git push origin exec
