実行ファイルがプッシュできない問題を修正?

--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - fixBuild
   workflow_dispatch:
 
 jobs:
@@ -27,7 +28,9 @@ jobs:
         git config user.email "github-actions@github.com"
 
     - name: Check out the exec branch
-      run: git checkout -b exec || git checkout exec
+      run: |
+        git pull origin main
+        git checkout -b exec || git checkout exec
 
     - name: Add executable
       run: |
