実行ファイルがプッシュできない問題を修正?

--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -30,7 +30,7 @@ jobs:
     - name: Check out the exec branch
       run: |
         git pull origin main
-        git checkout -b exec || git checkout exec
+        git switch exec
 
     - name: Add executable
       run: |
